Use https when linking to mediawiki.org
Change-Id: Ieffe0695978eb87ba63ab1c190c2191c09ed2b68

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -1,5 +1,5 @@
 {
-	"sandboxlink-desc": "{{desc|name=SandboxLink|url=http://www.mediawiki.org/wiki/Extension:SandboxLink}}",
+	"sandboxlink-desc": "{{desc|name=SandboxLink|url=https://www.mediawiki.org/wiki/Extension:SandboxLink}}",
 	"sandboxlink-subpage-name": "Name of the subpage where user's sandbox will be created. For example, 'sandbox' means that the link in personal tools menu will point to \"User:Example/sandbox\".",
 	"sandboxlink-portlet-label": "Label of the link in personal tools menu.",
 	"tooltip-pt-sandbox": "Tooltip of the link in personal tools menu.",
