--- a/i18n/pl.json
+++ b/i18n/pl.json
@@ -2,7 +2,5 @@
 	"sandboxlink-desc": "Dodaje link do brudnopisu użytkownika do menu osobistego.",
 	"sandboxlink-subpage-name": "brudnopis",
 	"sandboxlink-portlet-label": "Brudnopis",
-	"tooltip-pt-sandbox": "Twój brudnopis",
-	"sandboxlink-editintro-pagename": "-",
-	"sandboxlink-preload-pagename": "-"
+	"tooltip-pt-sandbox": "Twój brudnopis"
 }
