--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -3,6 +3,6 @@
 	"sandboxlink-subpage-name": "Name of the subpage where user's sandbox will be created. For example, 'sandbox' means that the link in personal tools menu will point to \"User:Example/sandbox\".",
 	"sandboxlink-portlet-label": "Label of the link in personal tools menu.",
 	"tooltip-pt-sandbox": "Tooltip of the link in personal tools menu.",
-	"sandboxlink-editintro-pagename": "{{optional}}\nTitle of the page that will be used as the 'editintro' parameter in the link in personal tools menu. '-' means the parameter won't be added.",
-	"sandboxlink-preload-pagename": "{{optional}}\nTitle of the page that will be used as the 'preload' parameter in the link in personal tools menu. '-' means the parameter won't be added."
+	"sandboxlink-editintro-pagename": "{{ignore}}\nTitle of the page that will be used as the 'editintro' parameter in the link in personal tools menu. '-' means the parameter won't be added.",
+	"sandboxlink-preload-pagename": "{{ignore}}\nTitle of the page that will be used as the 'preload' parameter in the link in personal tools menu. '-' means the parameter won't be added."
 }
