--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,5 +1,5 @@
 {
-	"sandboxlink-desc": "Add a link to user's personal sandbox to personal tools menu",
+	"sandboxlink-desc": "Adds a link to user's personal sandbox to personal tools menu",
 	"sandboxlink-subpage-name": "sandbox",
 	"sandboxlink-portlet-label": "Sandbox",
 	"tooltip-pt-sandbox": "Your sandbox",
