--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,4 +1,9 @@
 {
+	"@metadata": {
+		"authors": [
+			"Bartosz Dziewoński"
+		]
+	},
 	"sandboxlink-desc": "Adds a link to user's personal sandbox to personal tools menu",
 	"sandboxlink-subpage-name": "sandbox",
 	"sandboxlink-portlet-label": "Sandbox",
